@@ -7,9 +7,10 @@ import com.unicloudapp.common.group.GroupCloudDto;
 import com.unicloudapp.common.group.GroupUniqueName;
 import com.unicloudapp.group.application.GroupDetailsProjection;
 import com.unicloudapp.group.application.GroupFilterCriteria;
-import com.unicloudapp.group.application.port.GroupRepositoryPort;
 import com.unicloudapp.group.application.GroupRowProjection;
+import com.unicloudapp.group.application.port.GroupRepositoryPort;
 import com.unicloudapp.group.domain.Group;
+import com.unicloudapp.group.domain.GroupStatus;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -17,7 +18,6 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Repository;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -25,6 +25,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.hasCloudResourceAccess;
 import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.hasStatus;
@@ -171,9 +172,8 @@ class SqlGroupRepositoryAdapter implements GroupRepositoryPort {
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<GroupCloudDto> findAllGroupCloudDto() {
-        return groupJpaRepository.findAllProjectedBy()
+    public List<GroupCloudDto> findActiveGroups() {
+        return groupJpaRepository.findAllProjectedByGroupStatus(GroupStatus.Type.ACTIVE)
                 .stream()
                 .map(groupCloudDtoProjection -> {
                     GroupUniqueName groupUniqueName = GroupUniqueName.fromString(
@@ -184,7 +184,7 @@ class SqlGroupRepositoryAdapter implements GroupRepositoryPort {
                             groupCloudDtoProjection.getCloudResourceAccesses()
                                     .stream()
                                     .map(CloudResourceAccessId::of)
-                                    .toList()
+                                    .collect(Collectors.toList())
                     );
                 }).toList();
     }
@@ -207,7 +207,7 @@ interface GroupJpaRepository extends JpaRepository<GroupEntity, UUID> {
             Pageable pageable
     );
 
-    List<GroupCloudDtoProjection> findAllProjectedBy();
+    List<GroupCloudDtoProjection> findAllProjectedByGroupStatus(GroupStatus.Type groupStatus);
 }
 
 interface GroupCloudDtoProjection {
